--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -42,7 +42,7 @@
             <label for="phone_number">Phone Number</label>
             <input type="text" class="form-control" name="phone_number" placeholder="Enter your phone number" id="phone_number">
           </div>
-          <input type="submit" class="btn btn-success" value="Create!">
+          <input type="submit" class="btn btn-success" id="contact-submit" value="Create!">
         </form>
       </div>
     </div>
