--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,13 @@
 <div class="container-fluid"> 
-  <h1>Contacts</h1>
-  <ul class="nav nav-tabs" role="tablist">
-    <li class="active"><a href="#contact-list" data-toggle="tab">All Contacts</a></li>
-    <li><a href="#create" data-toggle="tab">Create a Contact</a></li>
-  </ul>
+  <nav class="navbar navbar-default">
+    <ul class="nav navbar-nav">
+      <a class="navbar-brand">Contacts!</a>
+      <li class="active"><a href="#contact-list" data-toggle="tab">All Contacts</a></li>
+      <li><a href="#create" data-toggle="tab">Create a Contact</a></li>
+    </ul>
+  </nav>
   <br/>
-<!-- Tab panes -->
+  <!-- DataTable --> 
   <div class="tab-content">
     <div class="tab-pane active" id="contact-list">
       <div class="container-fluid">
@@ -18,11 +20,13 @@
               <th>Email</th>
               <th>Phone Number</th>
               <th>Date Added</th>
+              <th>Edit</th>
             </tr>
           </thead>
         </table>
       </div>
     </div>
+    <!-- Create Form -->
     <div class="tab-pane" id="create">
       <div class="col-md-4">
         <form action="#" id="create-contact" role="form">
@@ -47,4 +51,39 @@
       </div>
     </div>
   </div>
+  <!-- Edit form -->
+  <div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <form action="#" id="edit-contact" role="form">
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="first_name">First Name</label>
+              <input type="text" class="form-control" placeholder="Enter your first name" name="first_name" id="first_name">
+            </div>
+            <div class="form-group">
+              <label for="last_name">Last Name</label>
+              <input type="text" class="form-control" placeholder="Enter your last name" name="last_name" id="last_name">
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="text" class="form-control" placeholder="Enter your email address" name="email" id="email">
+            </div>
+            <div class="form-group">
+              <label for="phone_number">Phone Number</label>
+              <input type="text" class="form-control" name="phone_number" placeholder="Enter your phone number" id="phone_number">
+            </div>
+          </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+        </form>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 </div>
