--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -77,10 +77,11 @@
               <label for="phone_number">Phone Number</label>
               <input type="text" class="form-control" name="phone_number" placeholder="Enter your phone number" id="phone_number">
             </div>
+            <input type="hidden" name="id" id="id">
           </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
         </div>
         </form>
       </div><!-- /.modal-content -->
