updated readme and api view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -75,6 +75,24 @@
           <li>phone_number</li>
         </ul>
       </p>
+      <h3>Edit a contact <small>PUT /contacts/:id</small></h3>
+      <p>
+        Params:
+        <ul>
+          <li>first_name</li>
+          <li>last_name</li>
+          <li>email</li>
+          <li>phone_number</li>
+        </ul>
+      </p>
+      <h3>Delete a contact <small>DELETE /contacts/:id</small></h3>
+      <p>
+        No params required.
+      </p>
+      <h3>Retrieve all contacts <small>GET /contacts</small></h3>
+      <p>
+        No params required.
+      </p>
     </div>
   </div>
   <!-- Edit form -->
